# phenoseeker

./: .gitignore  README.md  check_emb_numbers.ipynb  debug_em.ipynb  experiments_distributions.ipynb  pyproject.toml  sandbox.ipynb
configs/: config_extraction.yaml  config_test_all_norms.yaml
notebooks/: chad_bioproxy.ipynb  chad_dinov2 copy.ipynb  chad_dinov2.ipynb  chad_dinov2_em.ipynb  check_emb_numbers.ipynb  debug_bioproxy.ipynb  debug_em.ipynb  experiments_distributions.ipynb  explore_ChEMBL.ipynb  explore_jump_DUDE.ipynb  explore_jump_d4_rescore.ipynb  explore_jump_lit_PCBA.ipynb  fig_1.ipynb  fig_1_ature copy 2.ipynb  fig_1_ature copy 3.ipynb  fig_1_ature copy.ipynb  fig_1_ature.ipynb  fig_1_maps.ipynb  fig_1_umap.ipynb  fig_1_umap_dinov2_g.ipynb  fig_2.ipynb  fig_2_bioproxy.ipynb  fig_3_distrib_chem.ipynb  normalise_jump.ipynb  openphenom_fig_3  copy.ipynb  preprocess_well_emb copy.ipynb  preprocess_well_emb.ipynb  sandbox.ipynb  select_plates_for_all_tests.ipynb  sup_figures.ipynb
scripts/: balanced_plates.json  balanced_plates_388_plate.json  balanced_plates_388_plate_2.json  balanced_plates_51_lab.json  create_compounds_profiles.py  explore_dude.py  explore_lit_PCBA.py  extract_features.py  get_chembl_activities.py  prepare_csv_lit_pcba.py  test_all_norms.py  test_normalisations.py
src/phenoseeker/: __init__.py  all_norm_functions.py  bioproxy_evaluator.py  compute.py  embedding_manager copy.py  embedding_manager.py  norm_functions.py  plotting.py  transform.py  utils.py
