[tool.poetry]
name = "phenoseeker"
version = "0.1.0"
description = ""
authors = ["Maxime Sanchez <maxime.sanchez14@gmail.com>"]
license = "Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
pyyaml = "^6.0.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
pillow = "^11.0.0"
tqdm = "^4.67.1"
numpy = "^2.2.1"
pathlib = "^1.0.1"
joblib = "^1.4.2"
scipy = "^1.14.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
umap = "^0.1.1"
rdkit = "^2024.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
